--- a/data/objects/colonybuildings.toml
+++ b/data/objects/colonybuildings.toml
@@ -31,18 +31,20 @@ exploitationModifier = 1.7
 [ORBITAL_DEFENSE]
 name = "Orbital Defense"
 baseCost = [["COMMON_ORE", 10], ["UNCOMMON_ORE", 10], ["RARE_ORE", 10]]
-description = "What can we do if some unethical faction begins nuking our planet from orbit? To be honest, there's not much we can do but let's atleast shoot back with our Orbital Defense."
+description = "A gigantic and powerful SRTSP (surface-to-space) cannon that may do mild damage to enemy spaceships."
 flags = ["ENABLE_ORBITAL_CANNON"]
 
 [CONSUMER_GOODS_FACTORIES]
 name = "Consumer Goods Factory"
 baseCost = [["COMMON_ORE", 20]]
-description = "Produces goods for consumers to consume. Also produces pollution."
+description = "A massive, polluting factory complex that produces consumer goods. Requires industrial goods and oscillite."
+consumerGoodsMultiplier = 2.0
 
 [WEAPONS_FACTORIES]
 name = "Weapons Factory"
 baseCost = [["COMMON_ORE", 30], ["UNCOMMON_ORE", 10]]
 description = "The profitable military industrial complex."
+armamentsMultiplier = 2.0
 
 [EXPLORING]
 name = "Exploration HQ"
