circles are smoother & changes to selection shader

--- a/at_odds.vcxproj.filters
+++ b/at_odds.vcxproj.filters
@@ -64,6 +64,7 @@
     <ClInclude Include="src\NameGenerator.h" />
     <ClInclude Include="src\Fonts.h" />
     <ClInclude Include="src\TradeGoods.h" />
+    <ClInclude Include="src\SmoothCircle.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Animation.cpp" />
