added black holes and red giants

--- a/at_odds.vcxproj.filters
+++ b/at_odds.vcxproj.filters
@@ -124,5 +124,6 @@
     <None Include="data\shaders\bordershader.shader" />
     <None Include="data\objects\tradegoods.toml" />
     <None Include="data\shaders\terraplanetshader.shader" />
+    <None Include="data\shaders\blackholeshader.shader" />
   </ItemGroup>
 </Project>
