--- a/data/objects/tech.toml
+++ b/data/objects/tech.toml
@@ -2,3 +2,9 @@
 [WEAPONS_RESEARCH]
 name = "Weapons Research"
 description = "Fund the research and development of a new and unheard of weapon that will make our enemies quiver with fear."
+researchRequired = 1000.0
+
+[TEST]
+name = "Test Tech"
+description = "This is a test."
+researchRequired = 100.0
