--- a/data/objects/tech.toml
+++ b/data/objects/tech.toml
@@ -3,6 +3,7 @@
 name = "Weapons Research"
 description = "Fund the research and development of a new and unheard of weapon that will make our enemies quiver with fear."
 researchRequired = 1000.0
+unlockRandomWeapon = true
 
 [TEST]
 name = "Test Tech"
