made the resource gui much less ugly again, refactored some code to be better and fixed the jittery planet camera issue

--- a/at_odds.vcxproj.filters
+++ b/at_odds.vcxproj.filters
@@ -67,6 +67,7 @@
     <ClInclude Include="src\SmoothCircle.h" />
     <ClInclude Include="src\GUI\TechGUI.h" />
     <ClInclude Include="src\Tech.h" />
+    <ClInclude Include="src\GUI\ResourceGUI.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Animation.cpp" />
@@ -121,6 +122,7 @@
     <ClCompile Include="src\TradeGoods.cpp" />
     <ClCompile Include="src\GUI\TechGUI.cpp" />
     <ClCompile Include="src\Tech.cpp" />
+    <ClCompile Include="src\GUI\ResourceGUI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="data\objects\planetevents.toml" />
