massively increased spawn time for space trucks because of lag from too many ships, made spaceport's effects reduce space bus and space truck spawn time, fixed bug where ai controlled player briefly at the beginning of a game, and reduced the resource cost of constructor ships

--- a/at_odds.vcxproj.filters
+++ b/at_odds.vcxproj.filters
@@ -134,5 +134,6 @@
     <None Include="data\shaders\terraplanetshader.shader" />
     <None Include="data\shaders\blackholeshader.shader" />
     <None Include="data\objects\tech.toml" />
+    <None Include="data\objects\colonybuildingeffectstext.toml" />
   </ItemGroup>
 </Project>
