--- a/at_odds.vcxproj.filters
+++ b/at_odds.vcxproj.filters
@@ -69,6 +69,7 @@
     <ClInclude Include="src\Tech.h" />
     <ClInclude Include="src\GUI\ResourceGUI.h" />
     <ClInclude Include="src\GUI\BuildGUI.h" />
+    <ClInclude Include="src\MusicPlayer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Animation.cpp" />
@@ -125,6 +126,7 @@
     <ClCompile Include="src\Tech.cpp" />
     <ClCompile Include="src\GUI\ResourceGUI.cpp" />
     <ClCompile Include="src\GUI\BuildGUI.cpp" />
+    <ClCompile Include="src\MusicPlayer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="data\objects\planetevents.toml" />
