--- a/data/objects/spaceships.toml
+++ b/data/objects/spaceships.toml
@@ -51,6 +51,16 @@ colliderRadius = 150.0
 civilian = true
 playerCanGiveOrders = false
 
+[BIG_SPACE_BUS]
+name = "Big Space Bus"
+texturePath = "data/art/spacebus.png"
+mass = 90000.0
+health = 100.0
+colliderRadius = 250.0
+civilian = true
+playerCanGiveOrders = false
+scale = 2.0
+
 [SPACE_TRUCK]
 name = "Space Truck"
 texturePath = "data/art/spacetruck.png"
