--- a/data/objects/projectiles.toml
+++ b/data/objects/projectiles.toml
@@ -92,3 +92,8 @@ deathFunction = "smallExplosion"
 life = 100.0
 damage = 0.0
 planetaryInvasion = true
+
+[BEAM_LASER]
+life = 2500.0
+speed = 1.0
+damage = 50.0
