pirates now steal ship designs from the nearest faction, also moved ship designs to their own header file

--- a/at_odds.vcxproj.filters
+++ b/at_odds.vcxproj.filters
@@ -74,6 +74,7 @@
     <ClInclude Include="src\GUI\MinimapGUI.h" />
     <ClInclude Include="src\AsteroidBelt.h" />
     <ClInclude Include="src\ext\delaunator.hpp" />
+    <ClInclude Include="src\Designs.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Animation.cpp" />
