added a news gui and some basic news events

--- a/at_odds.vcxproj.filters
+++ b/at_odds.vcxproj.filters
@@ -76,6 +76,7 @@
     <ClInclude Include="src\ext\delaunator.hpp" />
     <ClInclude Include="src\Designs.h" />
     <ClInclude Include="src\GUI\DebugInfo.h" />
+    <ClInclude Include="src\GUI\NewsGUI.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Animation.cpp" />
@@ -137,6 +138,7 @@
     <ClCompile Include="src\GUI\MinimapGUI.cpp" />
     <ClCompile Include="src\Designs.cpp" />
     <ClCompile Include="src\GUI\DebugInfo.cpp" />
+    <ClCompile Include="src\GUI\NewsGUI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="data\objects\planetevents.toml" />
