added a refresh button and a current system only checkbox to the colony list gui

--- a/at_odds.vcxproj.filters
+++ b/at_odds.vcxproj.filters
@@ -77,6 +77,7 @@
     <ClInclude Include="src\Designs.h" />
     <ClInclude Include="src\GUI\DebugInfo.h" />
     <ClInclude Include="src\GUI\NewsGUI.h" />
+    <ClInclude Include="src\GUI\ColonyListGUI.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Animation.cpp" />
@@ -139,6 +140,7 @@
     <ClCompile Include="src\Designs.cpp" />
     <ClCompile Include="src\GUI\DebugInfo.cpp" />
     <ClCompile Include="src\GUI\NewsGUI.cpp" />
+    <ClCompile Include="src\GUI\ColonyListGUI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="data\objects\planetevents.toml" />
