added a black hole post processing effect and fixed a bug when changing resolutions

--- a/at_odds.vcxproj.filters
+++ b/at_odds.vcxproj.filters
@@ -156,5 +156,6 @@
     <None Include="data\shaders\lavaplanetshader.shader" />
     <None Include="data\shaders\ringsshader.shader" />
     <None Include="data\shaders\asteroidbeltshader.shader" />
+    <None Include="data\shaders\posteffectsshader.shader" />
   </ItemGroup>
 </Project>
