--- a/data/objects/tech.toml
+++ b/data/objects/tech.toml
@@ -56,6 +56,7 @@ description = "It's bigger and badder than destroyers, that's for sure."
 researchRequired = 2000.0
 addsChassis = ["CRUISER"]
 category = "Spaceship"
+unlocksTech = ["ADVANCED_FRIGATES"]
 
 [INVASIONS]
 name = "Invasions"
@@ -70,3 +71,18 @@ description = "When diplomacy fails..."
 researchRequired = 500.0
 addsWeapons = ["NUKE_LAUNCHER"]
 category = "Weapons"
+
+[ADVANCED_FRIGATES]
+name = "Advanced Frigates"
+description = "Breakthroughs in materials research can allow us to design frigates that are lighter and more powerful."
+researchRequired = 3000.0
+addsChassis = ["FRIGATE_2"]
+category = "Spaceship"
+unlocksTech = ["ADVANCED_DESTROYERS"]
+
+[ADVANCED_DESTROYERS]
+name = "Advanced Destroyers"
+description = "Seek... And destroy."
+researchRequired = 5000.0
+addsChassis = ["DESTROYER_2"]
+category = "Spaceship"
